// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Function params and body identifiers are in different environment 1`] = `
Object {
  "head": Object {
    "y": 1,
  },
  "id": Any<String>,
  "name": "functionBodyEnvironment",
  "tail": Object {
    "callExpression": Object {
      "arguments": Array [
        Object {
          "loc": undefined,
          "type": "Literal",
          "value": 2,
        },
      ],
      "callee": Node {
        "end": 83,
        "loc": SourceLocation {
          "end": Position {
            "column": 1,
            "line": 6,
          },
          "start": Position {
            "column": 0,
            "line": 6,
          },
        },
        "name": "f",
        "start": 82,
        "type": "Identifier",
      },
      "end": 86,
      "loc": SourceLocation {
        "end": Position {
          "column": 4,
          "line": 6,
        },
        "start": Position {
          "column": 0,
          "line": 6,
        },
      },
      "start": 82,
      "type": "CallExpression",
    },
    "head": Object {
      "x": 2,
    },
    "id": "4",
    "name": "f",
    "tail": Object {
      "head": Object {
        "3": [Function],
        "f": [Function],
      },
      "id": "1",
      "name": "programEnvironment",
      "tail": Object {
        "head": Object {
          "Infinity": Infinity,
          "NaN": NaN,
          "apply_in_underlying_javascript": [Function],
          "arity": [Function],
          "array_length": [Function],
          "char_at": [Function],
          "display": [Function],
          "display_list": [Function],
          "draw_data": [Function],
          "error": [Function],
          "get_time": [Function],
          "head": [Function],
          "is_array": [Function],
          "is_boolean": [Function],
          "is_function": [Function],
          "is_list": [Function],
          "is_null": [Function],
          "is_number": [Function],
          "is_pair": [Function],
          "is_string": [Function],
          "is_undefined": [Function],
          "list": [Function],
          "math_E": 2.718281828459045,
          "math_LN10": 2.302585092994046,
          "math_LN2": 0.6931471805599453,
          "math_LOG10E": 0.4342944819032518,
          "math_LOG2E": 1.4426950408889634,
          "math_PI": 3.141592653589793,
          "math_SQRT1_2": 0.7071067811865476,
          "math_SQRT2": 1.4142135623730951,
          "math_abs": [Function],
          "math_acos": [Function],
          "math_acosh": [Function],
          "math_asin": [Function],
          "math_asinh": [Function],
          "math_atan": [Function],
          "math_atan2": [Function],
          "math_atanh": [Function],
          "math_cbrt": [Function],
          "math_ceil": [Function],
          "math_clz32": [Function],
          "math_cos": [Function],
          "math_cosh": [Function],
          "math_exp": [Function],
          "math_expm1": [Function],
          "math_floor": [Function],
          "math_fround": [Function],
          "math_hypot": [Function],
          "math_imul": [Function],
          "math_log": [Function],
          "math_log10": [Function],
          "math_log1p": [Function],
          "math_log2": [Function],
          "math_max": [Function],
          "math_min": [Function],
          "math_pow": [Function],
          "math_random": [Function],
          "math_round": [Function],
          "math_sign": [Function],
          "math_sin": [Function],
          "math_sinh": [Function],
          "math_sqrt": [Function],
          "math_tan": [Function],
          "math_tanh": [Function],
          "math_trunc": [Function],
          "pair": [Function],
          "parse": [Function],
          "parse_int": [Function],
          "prompt": [Function],
          "raw_display": [Function],
          "set_head": [Function],
          "set_tail": [Function],
          "stream": [Function],
          "stream_tail": [Function],
          "stringify": [Function],
          "tail": [Function],
          "tokenize": [Function],
          "undefined": undefined,
        },
        "id": "-1",
        "name": "global",
        "tail": null,
      },
    },
  },
  "thisContext": undefined,
}
`;

exports[`Function params and body identifiers are in different environment 2`] = `
Object {
  "callExpression": Object {
    "arguments": Array [
      Object {
        "loc": undefined,
        "type": "Literal",
        "value": 2,
      },
    ],
    "callee": Node {
      "end": 83,
      "loc": SourceLocation {
        "end": Position {
          "column": 1,
          "line": 6,
        },
        "start": Position {
          "column": 0,
          "line": 6,
        },
      },
      "name": "f",
      "start": 82,
      "type": "Identifier",
    },
    "end": 86,
    "loc": SourceLocation {
      "end": Position {
        "column": 4,
        "line": 6,
      },
      "start": Position {
        "column": 0,
        "line": 6,
      },
    },
    "start": 82,
    "type": "CallExpression",
  },
  "head": Object {
    "x": 2,
  },
  "id": Any<String>,
  "name": "f",
  "tail": Object {
    "head": Object {
      "3": [Function],
      "f": [Function],
    },
    "id": "1",
    "name": "programEnvironment",
    "tail": Object {
      "head": Object {
        "Infinity": Infinity,
        "NaN": NaN,
        "apply_in_underlying_javascript": [Function],
        "arity": [Function],
        "array_length": [Function],
        "char_at": [Function],
        "display": [Function],
        "display_list": [Function],
        "draw_data": [Function],
        "error": [Function],
        "get_time": [Function],
        "head": [Function],
        "is_array": [Function],
        "is_boolean": [Function],
        "is_function": [Function],
        "is_list": [Function],
        "is_null": [Function],
        "is_number": [Function],
        "is_pair": [Function],
        "is_string": [Function],
        "is_undefined": [Function],
        "list": [Function],
        "math_E": 2.718281828459045,
        "math_LN10": 2.302585092994046,
        "math_LN2": 0.6931471805599453,
        "math_LOG10E": 0.4342944819032518,
        "math_LOG2E": 1.4426950408889634,
        "math_PI": 3.141592653589793,
        "math_SQRT1_2": 0.7071067811865476,
        "math_SQRT2": 1.4142135623730951,
        "math_abs": [Function],
        "math_acos": [Function],
        "math_acosh": [Function],
        "math_asin": [Function],
        "math_asinh": [Function],
        "math_atan": [Function],
        "math_atan2": [Function],
        "math_atanh": [Function],
        "math_cbrt": [Function],
        "math_ceil": [Function],
        "math_clz32": [Function],
        "math_cos": [Function],
        "math_cosh": [Function],
        "math_exp": [Function],
        "math_expm1": [Function],
        "math_floor": [Function],
        "math_fround": [Function],
        "math_hypot": [Function],
        "math_imul": [Function],
        "math_log": [Function],
        "math_log10": [Function],
        "math_log1p": [Function],
        "math_log2": [Function],
        "math_max": [Function],
        "math_min": [Function],
        "math_pow": [Function],
        "math_random": [Function],
        "math_round": [Function],
        "math_sign": [Function],
        "math_sin": [Function],
        "math_sinh": [Function],
        "math_sqrt": [Function],
        "math_tan": [Function],
        "math_tanh": [Function],
        "math_trunc": [Function],
        "pair": [Function],
        "parse": [Function],
        "parse_int": [Function],
        "prompt": [Function],
        "raw_display": [Function],
        "set_head": [Function],
        "set_tail": [Function],
        "stream": [Function],
        "stream_tail": [Function],
        "stringify": [Function],
        "tail": [Function],
        "tokenize": [Function],
        "undefined": undefined,
      },
      "id": "-1",
      "name": "global",
      "tail": null,
    },
  },
}
`;

exports[`Function params and body identifiers are in different environment 3`] = `
Object {
  "head": Object {
    "3": [Function],
    "f": [Function],
  },
  "id": Any<String>,
  "name": "programEnvironment",
  "tail": Object {
    "head": Object {
      "Infinity": Infinity,
      "NaN": NaN,
      "apply_in_underlying_javascript": [Function],
      "arity": [Function],
      "array_length": [Function],
      "char_at": [Function],
      "display": [Function],
      "display_list": [Function],
      "draw_data": [Function],
      "error": [Function],
      "get_time": [Function],
      "head": [Function],
      "is_array": [Function],
      "is_boolean": [Function],
      "is_function": [Function],
      "is_list": [Function],
      "is_null": [Function],
      "is_number": [Function],
      "is_pair": [Function],
      "is_string": [Function],
      "is_undefined": [Function],
      "list": [Function],
      "math_E": 2.718281828459045,
      "math_LN10": 2.302585092994046,
      "math_LN2": 0.6931471805599453,
      "math_LOG10E": 0.4342944819032518,
      "math_LOG2E": 1.4426950408889634,
      "math_PI": 3.141592653589793,
      "math_SQRT1_2": 0.7071067811865476,
      "math_SQRT2": 1.4142135623730951,
      "math_abs": [Function],
      "math_acos": [Function],
      "math_acosh": [Function],
      "math_asin": [Function],
      "math_asinh": [Function],
      "math_atan": [Function],
      "math_atan2": [Function],
      "math_atanh": [Function],
      "math_cbrt": [Function],
      "math_ceil": [Function],
      "math_clz32": [Function],
      "math_cos": [Function],
      "math_cosh": [Function],
      "math_exp": [Function],
      "math_expm1": [Function],
      "math_floor": [Function],
      "math_fround": [Function],
      "math_hypot": [Function],
      "math_imul": [Function],
      "math_log": [Function],
      "math_log10": [Function],
      "math_log1p": [Function],
      "math_log2": [Function],
      "math_max": [Function],
      "math_min": [Function],
      "math_pow": [Function],
      "math_random": [Function],
      "math_round": [Function],
      "math_sign": [Function],
      "math_sin": [Function],
      "math_sinh": [Function],
      "math_sqrt": [Function],
      "math_tan": [Function],
      "math_tanh": [Function],
      "math_trunc": [Function],
      "pair": [Function],
      "parse": [Function],
      "parse_int": [Function],
      "prompt": [Function],
      "raw_display": [Function],
      "set_head": [Function],
      "set_tail": [Function],
      "stream": [Function],
      "stream_tail": [Function],
      "stringify": [Function],
      "tail": [Function],
      "tokenize": [Function],
      "undefined": undefined,
    },
    "id": "-1",
    "name": "global",
    "tail": null,
  },
}
`;

exports[`Function params and body identifiers are in different environment 4`] = `
Object {
  "head": Object {
    "Infinity": Infinity,
    "NaN": NaN,
    "apply_in_underlying_javascript": [Function],
    "arity": [Function],
    "array_length": [Function],
    "char_at": [Function],
    "display": [Function],
    "display_list": [Function],
    "draw_data": [Function],
    "error": [Function],
    "get_time": [Function],
    "head": [Function],
    "is_array": [Function],
    "is_boolean": [Function],
    "is_function": [Function],
    "is_list": [Function],
    "is_null": [Function],
    "is_number": [Function],
    "is_pair": [Function],
    "is_string": [Function],
    "is_undefined": [Function],
    "list": [Function],
    "math_E": 2.718281828459045,
    "math_LN10": 2.302585092994046,
    "math_LN2": 0.6931471805599453,
    "math_LOG10E": 0.4342944819032518,
    "math_LOG2E": 1.4426950408889634,
    "math_PI": 3.141592653589793,
    "math_SQRT1_2": 0.7071067811865476,
    "math_SQRT2": 1.4142135623730951,
    "math_abs": [Function],
    "math_acos": [Function],
    "math_acosh": [Function],
    "math_asin": [Function],
    "math_asinh": [Function],
    "math_atan": [Function],
    "math_atan2": [Function],
    "math_atanh": [Function],
    "math_cbrt": [Function],
    "math_ceil": [Function],
    "math_clz32": [Function],
    "math_cos": [Function],
    "math_cosh": [Function],
    "math_exp": [Function],
    "math_expm1": [Function],
    "math_floor": [Function],
    "math_fround": [Function],
    "math_hypot": [Function],
    "math_imul": [Function],
    "math_log": [Function],
    "math_log10": [Function],
    "math_log1p": [Function],
    "math_log2": [Function],
    "math_max": [Function],
    "math_min": [Function],
    "math_pow": [Function],
    "math_random": [Function],
    "math_round": [Function],
    "math_sign": [Function],
    "math_sin": [Function],
    "math_sinh": [Function],
    "math_sqrt": [Function],
    "math_tan": [Function],
    "math_tanh": [Function],
    "math_trunc": [Function],
    "pair": [Function],
    "parse": [Function],
    "parse_int": [Function],
    "prompt": [Function],
    "raw_display": [Function],
    "set_head": [Function],
    "set_tail": [Function],
    "stream": [Function],
    "stream_tail": [Function],
    "stringify": [Function],
    "tail": [Function],
    "tokenize": [Function],
    "undefined": undefined,
  },
  "id": Any<String>,
  "name": "global",
  "tail": null,
}
`;
